--- a/.github/workflows/demo-workflow.yml
+++ b/.github/workflows/demo-workflow.yml
@@ -35,7 +35,7 @@ jobs:
         #installs pip and flake 8 also if requirements.txt is present then installs all the dependencies specified there
         run: |
           python -m pip install --upgrade pip
-          #TODO: Install flake8 using pip command here
+          pip install flake8
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
       - name: Display Python version
